[tool.poetry]
name = "driva-rfb"
version = "0.1.0"
description = ""
authors = ["Victor Belinello <victor@datadriva.com>"]
readme = "README.md"

[tool.poetry.scripts]
driva-rfb = "driva_rfb.main:app"

[tool.poetry.dependencies]
python = "^3.9"
typer = {extras = ["all"], version = "^0.4.0"}
beautifulsoup4 = "^4.10.0"
httpx = "^0.22.0"
pywget = "^0.31"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
